<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuggestionApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="hello_world">No Suggestions</string>
	<string name="hint">Suggest a Topic</string>
    <string name="button">Submit Suggestion</string>
    <string name="csrf">Use CSRF Token</string>
    <string name="suggestion">Suggestion</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>
