<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:SuggestionApp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="always"
          android:title="@string/action_search"
          SuggestionApp:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>
