<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
	    android:id="@+id/edittext"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    
	    android:hint="@string/hint"
	    android:inputType="text" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext"
        android:text="@string/button" />
    <CheckBox
        android:id="@+id/csrftoken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/button1"
        android:text="@string/csrf" />
   <!--   <ScrollView 
         android:layout_width="wrap_content"
   		 android:layout_height="wrap_content" 
   		 android:layout_below="@+id/csrftoken">
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView1"			
			android:text="@string/hello_world" />
    </ScrollView>-->
	<ListView
      	android:id="@+id/listView1"
      	android:layout_height="fill_parent"
      	android:layout_width="fill_parent"
      	android:layout_below="@+id/csrftoken"/>
    

</RelativeLayout>
